# Spendora

./: .env.example  .gitignore  README.md  agent.md  package-lock.json  package.json
apps/expense-desktop-tauri/: package.json
apps/expense-desktop-tauri/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/expense-desktop-tauri/src-tauri/capabilities/: default.json
apps/expense-desktop-tauri/src-tauri/icons/: icon.icns
apps/expense-desktop-tauri/src-tauri/src/: main.rs
apps/expense-desktop-ui/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/expense-desktop-ui/src/: main.test.tsx  main.tsx  styles.css
docs/: DEVELOPER_NOTES.md  README.md  desktop-rust-plan.md  import-issues-handoff-2026-04-12.md  spendora-full-analysis-2026-03-29.md  statement-v2-schema-first-4step-plan-2026-04-12.md  version-0.2-plan.md
docs/analysis/: agent-first-implementation-survey-2026-03-29.md  spendora-full-analysis-2026-03-29.md
docs/expense/: README.md  ai-pdf-extraction-research.md  api-contract.md  openapi-v1.stub.yaml  plaid-deferred-checklist.md  runbook-local.md  testing-step1.md
docs/features/: README.md
docs/features/card-account-model/: README.md  card-only-import-global-data-plan-2026-04-12.md
docs/issues/: known-issues.md
docs/plans/: README.md
docs/plans/archive/: lama-extraction-0.2.md  runtime-path-enforcement-plan.md  statement-v2-direction-balance-3phase-plan-2026-04-11.md  statement-v2-schema-first-4step-plan-2026-04-12.md
scripts/: db-clean.sh  dev-clean.sh
services/expense-rs/: Cargo.toml
services/expense-rs/crates/agent/: Cargo.toml
services/expense-rs/crates/agent/src/: lib.rs
services/expense-rs/crates/api/: Cargo.toml
services/expense-rs/crates/api/src/: accounts.rs  imports.rs  main.rs  plaid.rs  settings.rs  state.rs  statements.rs  transactions.rs
services/expense-rs/crates/connectors_ai/: Cargo.toml
services/expense-rs/crates/connectors_ai/src/: lib.rs
services/expense-rs/crates/connectors_manual/: Cargo.toml
services/expense-rs/crates/connectors_manual/src/: lib.rs
services/expense-rs/crates/connectors_plaid/: Cargo.toml
services/expense-rs/crates/connectors_plaid/src/: lib.rs
services/expense-rs/crates/core/: Cargo.toml
services/expense-rs/crates/core/src/: lib.rs
services/expense-rs/crates/storage_sqlite/: Cargo.toml
services/expense-rs/crates/storage_sqlite/src/: lib.rs
services/expense-rs/crates/worker/: Cargo.toml
services/expense-rs/crates/worker/src/: main.rs
services/expense-rs/migrations/: 0001_init.sql  0002_import_pipeline.sql  0003_extraction_settings.sql  0004_statement_foundation.sql  0005_import_rows_statement_link.sql  0006_direction_and_statement_summary.sql  0007_statement_v2_schema_first.sql  0008_import_card_resolution.sql
services/expense-rs/schemas/: statement_v1.json  statement_v2.json
tests/step1/: run-all.sh  smoke.sh  stress-lite.sh  tauri-manual-checklist.md
