[workspace]
members = [
  "crates/core",
  "crates/storage_sqlite",
  "crates/connectors_plaid",
  "crates/connectors_manual",
  "crates/connectors_ai",
  "crates/api",
  "crates/worker",
  "crates/agent"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
axum = "0.7"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "chrono", "uuid"] }
tokio = { version = "1.42", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"] }
async-trait = "0.1"
