[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
expense_core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
storage_sqlite = { path = "../storage_sqlite" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { version = "0.6", features = ["cors"] }

[dev-dependencies]
tower = "0.5"
