[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
connectors_manual = { path = "../connectors_manual" }
connectors_ai = { path = "../connectors_ai" }
expense_core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
storage_sqlite = { path = "../storage_sqlite" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
